package com.ecms.entity;

public class LabResult {
}
