@startuml UC34_RecordAndSubmitLabResults_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class LabOrderController {
    + startLabOrder(labOrderId: Long, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
    + saveDraft(labOrderId: Long, request: LabResultRequest, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
    + submitLabResult(labOrderId: Long, request: LabResultRequest, userDetails: UserDetails): ResponseEntity<ApiResponse<LabOrderResponse>>
}

interface LabOrderService {
    + startLabOrder(labOrderId: Long, labTechnicianId: Long): LabOrderResponse
    + saveDraft(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
    + submitLabResult(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
}

class LabOrderServiceImpl {
    + startLabOrder(labOrderId: Long, labTechnicianId: Long): LabOrderResponse
    + saveDraft(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
    + submitLabResult(labOrderId: Long, request: LabResultRequest, labTechnicianId: Long): LabOrderResponse
}

class LabOrderRepository {
    + findById(id: Long): LabOrder
    + save(order: LabOrder): LabOrder
}

class LabResultRepository {
    + save(result: LabResult): LabResult
}

class NotificationService {
    + notifyDoctorOfLabResult(order: LabOrder, result: LabResult): void
}

class LabOrder {
    - orderId: Long
    - status: LabOrderStatus
    + setStatus(status: LabOrderStatus): void
}

class LabResult {
    - resultId: Long
    - labOrderId: Long
    - status: LabOrderStatus
    - measuredValues: String
    - attachedImages: String
    - submittedBy: Long
    - submittedAt: LocalDateTime
    + setStatus(status: LabOrderStatus): void
}

enum LabOrderStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    CANCELLED
}

class LabResultRequest {
    - measuredValues: String
    - attachedImages: List<MultipartFile>
}

class LabOrderResponse {
    - orderId: Long
    - status: String
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

LabOrderController ..> LabOrderService : uses
LabOrderController ..> ApiResponse : creates
LabOrderService <|.. LabOrderServiceImpl : implements
LabOrderServiceImpl ..> LabOrderRepository : uses
LabOrderServiceImpl ..> LabResultRepository : uses
LabOrderServiceImpl ..> NotificationService : uses
LabOrderServiceImpl ..> LabResultRequest : consumes
LabOrderServiceImpl ..> LabOrderResponse : creates

LabOrderRepository ..> LabOrder : manages
LabResultRepository ..> LabResult : manages
LabOrder "1" -- "1" LabOrderStatus : uses >
LabResult "1" -- "1" LabOrderStatus : uses >

LabOrder "1" *-- "1" LabResult : has >

@enduml
